--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         }
         h1 {
             font-size: 50px;
-            color: #d00000;
+            color: #f5f5f5;
         }
     </style>
 </head>
