--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background-color: #ffcccc;
+            background-color: #f5f5f5;
             font-family: Arial, sans-serif;
         }
         h1 {
             font-size: 50px;
-            color: #f5f5f5;
+            color: #ff0000;
         }
     </style>
 </head>
