--- a/index.html
+++ b/index.html
@@ -3,23 +3,121 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Messaggio d'Amore</title>
+    <title>Azienda Agricola</title>
     <style>
         body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            background-color: #f5f5f5;
             font-family: Arial, sans-serif;
+            text-align: center;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
         }
-        h1 {
-            font-size: 50px;
-            color: #ff0000;
+        header {
+            background: url('https://via.placeholder.com/1200x400') no-repeat center center/cover;
+            color: white;
+            padding: 50px;
+            font-size: 24px;
+        }
+        .container {
+            max-width: 1200px;
+            margin: auto;
+            padding: 20px;
+        }
+        .product {
+            display: inline-block;
+            background: white;
+            margin: 15px;
+            padding: 15px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            width: 250px;
+        }
+        .product img {
+            width: 100%;
+            border-radius: 10px;
+        }
+        .button {
+            display: inline-block;
+            margin-top: 10px;
+            padding: 10px 15px;
+            background: #28a745;
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        .contact, .about {
+            margin-top: 40px;
+            padding: 20px;
+            background: #fff;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            display: inline-block;
+            width: 300px;
+        }
+        input, textarea {
+            width: 100%;
+            margin-top: 10px;
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+        footer {
+            margin-top: 40px;
+            padding: 20px;
+            background: #28a745;
+            color: white;
         }
     </style>
 </head>
 <body>
-    <h1>Ti amo Ilenia ❤️</h1>
+    <header>
+        <h1>Azienda Agricola Verde</h1>
+        <p>Prodotti naturali e biologici direttamente dalla nostra terra.</p>
+    </header>
+
+    <h2>Il nostro catalogo</h2>
+    <div class="container">
+        <div class="product">
+            <img src="https://via.placeholder.com/250" alt="Miele Biologico">
+            <h2>Miele Biologico</h2>
+            <p>Dolce e naturale, raccolto dalle nostre api.</p>
+            <p><strong>€8,00</strong></p>
+            <button class="button">Acquista</button>
+        </div>
+        <div class="product">
+            <img src="https://via.placeholder.com/250" alt="Olio d'Oliva">
+            <h2>Olio d'Oliva</h2>
+            <p>Extravergine di qualità superiore.</p>
+            <p><strong>€12,00</strong></p>
+            <button class="button">Acquista</button>
+        </div>
+        <div class="product">
+            <img src="https://via.placeholder.com/250" alt="Formaggio Artigianale">
+            <h2>Formaggio Artigianale</h2>
+            <p>Preparato con latte fresco di montagna.</p>
+            <p><strong>€15,00</strong></p>
+            <button class="button">Acquista</button>
+        </div>
+    </div>
+    
+    <h2>Chi siamo</h2>
+    <div class="about">
+        <p>La nostra azienda agricola nasce con l'amore per la natura e il desiderio di portare sulle vostre tavole prodotti genuini e di alta qualità.</p>
+    </div>
+    
+    <h2>Contattaci</h2>
+    <div class="contact">
+        <form>
+            <input type="text" placeholder="Nome" required>
+            <input type="email" placeholder="Email" required>
+            <textarea placeholder="Messaggio" rows="4" required></textarea>
+            <button class="button" type="submit">Invia</button>
+        </form>
+    </div>
+
+    <footer>
+        <p>&copy; 2025 Azienda Agricola Verde. Tutti i diritti riservati.</p>
+    </footer>
 </body>
 </html>
