--- a/index.html
+++ b/index.html
@@ -7,21 +7,33 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            text-align: center;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
+            background-color: #f8f8f8;
         }
         header {
             background: url('https://via.placeholder.com/1200x400') no-repeat center center/cover;
             color: white;
-            padding: 50px;
+            text-align: center;
+            padding: 60px 20px;
             font-size: 24px;
+        }
+        nav {
+            background: #2a7a2a;
+            padding: 15px;
+            text-align: center;
+        }
+        nav a {
+            color: white;
+            text-decoration: none;
+            margin: 0 15px;
+            font-size: 18px;
         }
         .container {
             max-width: 1200px;
             margin: auto;
             padding: 20px;
+            text-align: center;
         }
         .product {
             display: inline-block;
@@ -36,88 +48,68 @@
             width: 100%;
             border-radius: 10px;
         }
-        .button {
-            display: inline-block;
-            margin-top: 10px;
-            padding: 10px 15px;
-            background: #28a745;
-            color: white;
-            text-decoration: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
         .contact, .about {
-            margin-top: 40px;
             padding: 20px;
-            background: #fff;
+            background: white;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            display: inline-block;
-            width: 300px;
-        }
-        input, textarea {
-            width: 100%;
-            margin-top: 10px;
-            padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
+            margin: 20px auto;
+            max-width: 600px;
         }
         footer {
-            margin-top: 40px;
-            padding: 20px;
-            background: #28a745;
+            background: #2a7a2a;
             color: white;
+            text-align: center;
+            padding: 20px;
+            margin-top: 20px;
         }
     </style>
 </head>
 <body>
     <header>
         <h1>Azienda Agricola Verde</h1>
-        <p>Prodotti naturali e biologici direttamente dalla nostra terra.</p>
+        <p>Qualità e tradizione dalla nostra terra</p>
     </header>
 
-    <h2>Il nostro catalogo</h2>
-    <div class="container">
+    <nav>
+        <a href="#home">Home</a>
+        <a href="#prodotti">Prodotti</a>
+        <a href="#chi-siamo">Chi Siamo</a>
+        <a href="#contatti">Contatti</a>
+    </nav>
+
+    <section id="prodotti" class="container">
+        <h2>I nostri prodotti</h2>
         <div class="product">
             <img src="https://via.placeholder.com/250" alt="Miele Biologico">
             <h2>Miele Biologico</h2>
             <p>Dolce e naturale, raccolto dalle nostre api.</p>
-            <p><strong>€8,00</strong></p>
-            <button class="button">Acquista</button>
         </div>
         <div class="product">
             <img src="https://via.placeholder.com/250" alt="Olio d'Oliva">
             <h2>Olio d'Oliva</h2>
             <p>Extravergine di qualità superiore.</p>
-            <p><strong>€12,00</strong></p>
-            <button class="button">Acquista</button>
         </div>
         <div class="product">
             <img src="https://via.placeholder.com/250" alt="Formaggio Artigianale">
             <h2>Formaggio Artigianale</h2>
             <p>Preparato con latte fresco di montagna.</p>
-            <p><strong>€15,00</strong></p>
-            <button class="button">Acquista</button>
         </div>
-    </div>
-    
-    <h2>Chi siamo</h2>
-    <div class="about">
-        <p>La nostra azienda agricola nasce con l'amore per la natura e il desiderio di portare sulle vostre tavole prodotti genuini e di alta qualità.</p>
-    </div>
-    
-    <h2>Contattaci</h2>
-    <div class="contact">
-        <form>
-            <input type="text" placeholder="Nome" required>
-            <input type="email" placeholder="Email" required>
-            <textarea placeholder="Messaggio" rows="4" required></textarea>
-            <button class="button" type="submit">Invia</button>
-        </form>
-    </div>
+    </section>
+
+    <section id="chi-siamo" class="about">
+        <h2>Chi siamo</h2>
+        <p>La nostra azienda agricola nasce con la passione per la terra e la volontà di offrire prodotti genuini e di qualità.</p>
+    </section>
+
+    <section id="contatti" class="contact">
+        <h2>Contattaci</h2>
+        <p>Email: info@aziendaagricolaverde.it</p>
+        <p>Telefono: +39 012 345 6789</p>
+    </section>
 
     <footer>
-        <p>&copy; 2025 Azienda Agricola Verde. Tutti i diritti riservati.</p>
+        <p>&copy; 2025 Azienda Agricola Verde - Tutti i diritti riservati.</p>
     </footer>
 </body>
 </html>
