--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Azienda Agricola</title>
+    <title>Azienda Agricola Tirone</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -67,7 +67,7 @@
 </head>
 <body>
     <header>
-        <h1>Azienda Agricola Verde</h1>
+        <h1>Azienda Agricola Tirone</h1>
         <p>Qualità e tradizione dalla nostra terra</p>
     </header>
 
@@ -109,7 +109,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2025 Azienda Agricola Verde - Tutti i diritti riservati.</p>
+        <p>&copy; 2025 Azienda Agricola Tirone - Tutti i diritti riservati.</p>
     </footer>
 </body>
 </html>
