--- a/index.html
+++ b/index.html
@@ -11,13 +11,6 @@
             padding: 0;
             background-color: #f8f8f8;
         }
-        header {
-            background: url('https://via.placeholder.com/1200x400') no-repeat center center/cover;
-            color: white;
-            text-align: center;
-            padding: 60px 20px;
-            font-size: 24px;
-        }
         nav {
             background: #2a7a2a;
             padding: 15px;
@@ -28,6 +21,16 @@
             text-decoration: none;
             margin: 0 15px;
             font-size: 18px;
+        }
+        header {
+            background: url('https://via.placeholder.com/1200x400') no-repeat center center/cover;
+            color: white;
+            text-align: center;
+            padding: 60px 20px;
+            font-size: 24px;
+        }
+        .title {
+            color: blue;
         }
         .container {
             max-width: 1200px;
@@ -66,18 +69,18 @@
     </style>
 </head>
 <body>
-    <header>
-        <h1>Azienda Agricola Tirone</h1>
-        <p>Qualità e tradizione dalla nostra terra</p>
-    </header>
-
     <nav>
         <a href="#home">Home</a>
         <a href="#prodotti">Prodotti</a>
         <a href="#chi-siamo">Chi Siamo</a>
         <a href="#contatti">Contatti</a>
     </nav>
-
+    
+    <header>
+        <h1 class="title">Azienda Agricola Tirone</h1>
+        <p>Qualità e tradizione dalla nostra terra</p>
+    </header>
+    
     <section id="prodotti" class="container">
         <h2>I nostri prodotti</h2>
         <div class="product">
