--- a/index.html
+++ b/index.html
@@ -9,34 +9,41 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f8f8f8;
+            background-color: #e0f2e0; /* Verde più chiaro */
         }
-        nav {
-            background: #2a7a2a;
+        .navbar {
+            position: fixed;
+            top: 0;
+            width: 100%;
+            background: #5aa35a; /* Verde chiaro */
             padding: 15px;
             text-align: center;
+            z-index: 1000;
         }
-        nav a {
+        .navbar a {
             color: white;
             text-decoration: none;
             margin: 0 15px;
             font-size: 18px;
         }
         header {
-            background: url('https://via.placeholder.com/1200x400') no-repeat center center/cover;
-            color: white;
             text-align: center;
-            padding: 60px 20px;
-            font-size: 24px;
+            padding: 100px 20px;
+            background: rgba(255, 255, 255, 0.8);
         }
-        .title {
+        header h1 {
             color: blue;
+            font-size: 36px;
         }
         .container {
             max-width: 1200px;
             margin: auto;
-            padding: 20px;
+            padding: 40px;
             text-align: center;
+            background: white;
+            color: black;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
         .product {
             display: inline-block;
@@ -60,42 +67,44 @@
             max-width: 600px;
         }
         footer {
-            background: #2a7a2a;
+            background: #5aa35a; /* Verde chiaro */
             color: white;
             text-align: center;
             padding: 20px;
+            width: 100%;
             margin-top: 20px;
         }
     </style>
 </head>
 <body>
-    <nav>
+
+    <nav class="navbar">
         <a href="#home">Home</a>
         <a href="#prodotti">Prodotti</a>
         <a href="#chi-siamo">Chi Siamo</a>
         <a href="#contatti">Contatti</a>
     </nav>
-    
-    <header>
+
+    <header id="home">
         <h1 class="title">Azienda Agricola Tirone</h1>
         <p>Qualità e tradizione dalla nostra terra</p>
     </header>
-    
+
     <section id="prodotti" class="container">
         <h2>I nostri prodotti</h2>
         <div class="product">
             <img src="https://via.placeholder.com/250" alt="Miele Biologico">
-            <h2>Miele Biologico</h2>
+            <h3>Miele Biologico</h3>
             <p>Dolce e naturale, raccolto dalle nostre api.</p>
         </div>
         <div class="product">
             <img src="https://via.placeholder.com/250" alt="Olio d'Oliva">
-            <h2>Olio d'Oliva</h2>
+            <h3>Olio d'Oliva</h3>
             <p>Extravergine di qualità superiore.</p>
         </div>
         <div class="product">
             <img src="https://via.placeholder.com/250" alt="Formaggio Artigianale">
-            <h2>Formaggio Artigianale</h2>
+            <h3>Formaggio Artigianale</h3>
             <p>Preparato con latte fresco di montagna.</p>
         </div>
     </section>
@@ -114,5 +123,6 @@
     <footer>
         <p>&copy; 2025 Azienda Agricola Tirone - Tutti i diritti riservati.</p>
     </footer>
+
 </body>
 </html>
