--- a/index.html
+++ b/index.html
@@ -28,8 +28,15 @@
         }
         header {
             text-align: center;
-            padding: 100px 20px;
+            padding: 60px 20px;
             background: rgba(255, 255, 255, 0.8);
+        }
+        header img {
+            max-width: 100%;
+            height: auto;
+            margin-top: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
         header h1 {
             color: blue;
@@ -88,6 +95,7 @@
     <header id="home">
         <h1 class="title">Azienda Agricola Tirone</h1>
         <p>Qualità e tradizione dalla nostra terra</p>
+        <img src="immagine-home.jpg" alt="Panorama della campagna">
     </header>
 
     <section id="prodotti" class="container">
