--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <header id="home">
         <h1 class="title">Azienda Agricola Tirone</h1>
         <p>Qualità e tradizione dalla nostra terra</p>
-        <img src="immagine-home.jpg">
+        <img src="immagine-home.jpg.webp">
     </header>
 
     <section id="prodotti" class="container">
