--- a/index.html
+++ b/index.html
@@ -100,19 +100,19 @@
     <section id="prodotti" class="container">
         <h2>I nostri prodotti</h2>
         <div class="product">
-            <img src="https://via.placeholder.com/250" alt="Miele Biologico">
-            <h3>Miele Biologico</h3>
-            <p>Dolce e naturale, raccolto dalle nostre api.</p>
-        </div>
-        <div class="product">
-            <img src="https://via.placeholder.com/250" alt="Olio d'Oliva">
-            <h3>Olio d'Oliva</h3>
+            <img src="41c92cda-44f3-4122-bb27-75426809bc25.webp" alt="Olio d'oliva Biologico">
+            <h3>Olio d'oliva Biologico</h3>
             <p>Extravergine di qualità superiore.</p>
         </div>
         <div class="product">
-            <img src="https://via.placeholder.com/250" alt="Formaggio Artigianale">
-            <h3>Formaggio Artigianale</h3>
-            <p>Preparato con latte fresco di montagna.</p>
+            <img src="fdbe1516-125f-4f85-b799-b64905667132.webp" alt="Mandorle biologiche">
+            <h3>Mandorle Biologiche</h3>
+            <p>buone.</p>
+        </div>
+        <div class="product">
+            <img src="1aaf52e4-2f81-4ccd-9855-c61163bed3c2.webp" alt="Vino">
+            <h3>Vino</h3>
+            <p>Preparato con uva.</p>
         </div>
     </section>
 
