--- a/index.html
+++ b/index.html
@@ -73,6 +73,12 @@
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             margin: 20px auto;
             max-width: 600px;
+            text-align: center;
+        }
+        .about img {
+            width: 100%;
+            border-radius: 10px;
+            margin-top: 20px;
         }
         footer {
             background: #a4d4a4;
@@ -100,25 +106,26 @@
     <section id="prodotti" class="container">
         <h2>I nostri prodotti</h2>
         <div class="product">
-            <img src="41c92cda-44f3-4122-bb27-75426809bc25.webp" alt="Olio d'oliva Biologico">
+            <img src="olio.jpg" alt="Olio d'oliva Biologico">
             <h3>Olio d'oliva Biologico</h3>
             <p>Extravergine di qualità superiore.</p>
         </div>
         <div class="product">
-            <img src="fdbe1516-125f-4f85-b799-b64905667132.webp" alt="Mandorle biologiche">
+            <img src="mandorle.jpg" alt="Mandorle biologiche">
             <h3>Mandorle Biologiche</h3>
-            <p>buone.</p>
+            <p>Buone e croccanti.</p>
         </div>
         <div class="product">
-            <img src="1aaf52e4-2f81-4ccd-9855-c61163bed3c2.webp" alt="Vino">
+            <img src="vino.jpg" alt="Vino">
             <h3>Vino</h3>
-            <p>Preparato con uva.</p>
+            <p>Preparato con uva selezionata.</p>
         </div>
     </section>
 
     <section id="chi-siamo" class="about">
         <h2>Chi siamo</h2>
         <p>La nostra azienda agricola nasce con la passione per la terra e la volontà di offrire prodotti genuini e di qualità.</p>
+        <img src="elegant_portrait.jpg" alt="Foto del fondatore">
     </section>
 
     <section id="contatti" class="contact">
