--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
             position: fixed;
             top: 0;
             width: 100%;
-            background: #a4d4a4; /* Verde più chiaro */
+            background: rgba(164, 212, 164, 0.8);
+            backdrop-filter: blur(10px);
             padding: 15px;
             text-align: center;
             z-index: 1000;
@@ -43,42 +44,29 @@
             padding: 20px;
             border-radius: 10px;
         }
-        .container {
+        .content-section {
             max-width: 1200px;
             margin: auto;
             padding: 40px;
             text-align: center;
+            transition: background 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+        }
+        .content-section.scrolled {
             background: white;
-            color: black;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
         .product {
             display: inline-block;
-            background: white;
             margin: 15px;
             padding: 15px;
             border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             width: 250px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
         .product img {
             width: 100%;
             border-radius: 10px;
-        }
-        .contact, .about {
-            padding: 20px;
-            background: white;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            margin: 20px auto;
-            max-width: 600px;
-            text-align: center;
-        }
-        .about img {
-            width: 100%;
-            border-radius: 10px;
-            margin-top: 20px;
         }
         footer {
             background: #a4d4a4;
@@ -86,7 +74,6 @@
             text-align: center;
             padding: 20px;
             width: 100%;
-            margin-top: 20px;
         }
     </style>
 </head>
@@ -103,7 +90,7 @@
         <h1>Azienda Agricola Tirone</h1>
     </section>
 
-    <section id="prodotti" class="container">
+    <section id="prodotti" class="content-section">
         <h2>I nostri prodotti</h2>
         <div class="product">
             <img src="41c92cda-44f3-4122-bb27-75426809bc25.webp" alt="Olio d'oliva Biologico">
@@ -115,20 +102,14 @@
             <h3>Mandorle Biologiche</h3>
             <p>Buone e croccanti.</p>
         </div>
-        <div class="product">
-            <img src="1aaf52e4-2f81-4ccd-9855-c61163bed3c2.webp" alt="Vino">
-            <h3>Vino</h3>
-            <p>Preparato con uva selezionata.</p>
-        </div>
     </section>
 
-    <section id="chi-siamo" class="about">
+    <section id="chi-siamo" class="content-section">
         <h2>Chi siamo</h2>
         <p>La nostra azienda agricola nasce con la passione per la terra e la volontà di offrire prodotti genuini e di qualità.</p>
-        <img src="elegant_portrait.jpg" alt="Foto del fondatore">
     </section>
 
-    <section id="contatti" class="contact">
+    <section id="contatti" class="content-section">
         <h2>Contattaci</h2>
         <p>Email: info@aziendaagricolaverde.it</p>
         <p>Telefono: +39 012 345 6789</p>
@@ -138,5 +119,16 @@
         <p>&copy; 2025 Azienda Agricola Tirone - Tutti i diritti riservati.</p>
     </footer>
 
+    <script>
+        window.addEventListener('scroll', function() {
+            document.querySelectorAll('.content-section').forEach(section => {
+                if (window.scrollY > section.offsetTop - window.innerHeight / 2) {
+                    section.classList.add('scrolled');
+                } else {
+                    section.classList.remove('scrolled');
+                }
+            });
+        });
+    </script>
 </body>
 </html>
