--- a/index.html
+++ b/index.html
@@ -102,6 +102,11 @@
             <h3>Mandorle Biologiche</h3>
             <p>Buone e croccanti.</p>
         </div>
+        <div class="product">
+            <img src="1aaf52e4-2f81-4ccd-9855-c61163bed3c2.webp" alt="Vino">
+            <h3>Vino</h3>
+            <p>Preparato con uva selezionata.</p>
+        </div>
     </section>
 
     <section id="chi-siamo" class="content-section">
