--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             position: fixed;
             top: 0;
             width: 100%;
-            background: rgba(0, 0, 0, 0.6);
+            background: url('immagine-home.jpg.webp') no-repeat center center/cover;
             backdrop-filter: blur(10px);
             padding: 15px;
             text-align: center;
@@ -26,14 +26,16 @@
             margin: 0 15px;
             font-size: 18px;
         }
-        .hero, .content-section {
+        .hero {
             position: relative;
             width: 100%;
-            height: auto;
+            height: 100vh;
             background: url('immagine-home.jpg.webp') no-repeat center center/cover;
+            display: flex;
+            justify-content: center;
+            align-items: center;
             text-align: center;
             color: white;
-            padding: 40px 0;
         }
         .hero h1 {
             font-size: 50px;
@@ -41,6 +43,15 @@
             background: rgba(0, 0, 0, 0.6);
             padding: 20px;
             border-radius: 10px;
+        }
+        .content-section {
+            max-width: 1200px;
+            margin: auto;
+            padding: 40px;
+            text-align: center;
+            background: white;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
         .product {
             display: inline-block;
