--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             position: fixed;
             top: 0;
             width: 100%;
-            background: url('immagine-home.jpg.webp') no-repeat center center/cover;
+            background: rgba(0, 0, 0, 0.6);
             backdrop-filter: blur(10px);
             padding: 15px;
             text-align: center;
