--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         .hero {
             position: relative;
             width: 100%;
-            height: 100vh;
+            height: 120vh;
             background: url('immagine-home.jpg.webp') no-repeat center center/cover;
             display: flex;
             justify-content: center;
@@ -43,6 +43,27 @@
             background: rgba(0, 0, 0, 0.6);
             padding: 20px;
             border-radius: 10px;
+        }
+        .description {
+            text-align: center;
+            background: white;
+            padding: 50px 20px;
+        }
+        .description h2 {
+            color: black;
+            font-size: 24px;
+            margin-bottom: 10px;
+        }
+        .description h3 {
+            color: black;
+            font-size: 30px;
+            margin-bottom: 20px;
+        }
+        .description p {
+            color: black;
+            font-size: 18px;
+            max-width: 800px;
+            margin: 0 auto;
         }
         .content-section {
             max-width: 1200px;
@@ -86,6 +107,12 @@
 
     <section id="home" class="hero">
         <h1>Azienda Agricola Tirone</h1>
+    </section>
+
+    <section class="description">
+        <h2>Welcome</h2>
+        <h3>La nostra azienda</h3>
+        <p>L'azienda agricola Tirone ha sede a Grotte (Ag), a circa 20 Km dalla Valle dei Templi. L'azienda, condotta con i sistemi dell'agricoltura biologica, produce principalmente mandorle ed olio.</p>
     </section>
 
     <section id="prodotti" class="content-section">
